// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App when state is initial renders no items in the list 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "no hotels found",
    },
    "ref": null,
    "rendered": "no hotels found",
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "no hotels found",
      },
      "ref": null,
      "rendered": "no hotels found",
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`App when state is populated with data renders correctly with items 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <App />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <header>
          <h1>
            Qantas Hotels
          </h1>
        </header>,
        <main>
          <FilterBar
            onOptionChange={[Function]}
            optionSelected="desc"
          />
          <HotelList
            hotels={
              Array [
                Object {
                  "address": "ADDRESS",
                  "freeCancellation": true,
                  "id": "ID",
                  "image": "IMG_URL",
                  "name": "NAME",
                  "price": 329,
                  "promotion": "PROMOTION",
                  "rating": 4,
                  "ratingType": "RATNG_TYPE",
                  "savings": 30,
                  "title": "TITLE",
                },
                Object {
                  "address": "ADDRESS2",
                  "freeCancellation": true,
                  "id": "ID2",
                  "image": "IMG_URL2",
                  "name": "NAME",
                  "price": 329,
                  "promotion": "PROMOTION",
                  "rating": 4,
                  "ratingType": "RATNG_TYPE",
                  "savings": 30,
                  "title": "TITLE2",
                },
              ]
            }
          />
        </main>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <h1>
            Qantas Hotels
          </h1>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Qantas Hotels",
          },
          "ref": null,
          "rendered": "Qantas Hotels",
          "type": "h1",
        },
        "type": "header",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <FilterBar
              onOptionChange={[Function]}
              optionSelected="desc"
            />,
            <HotelList
              hotels={
                Array [
                  Object {
                    "address": "ADDRESS",
                    "freeCancellation": true,
                    "id": "ID",
                    "image": "IMG_URL",
                    "name": "NAME",
                    "price": 329,
                    "promotion": "PROMOTION",
                    "rating": 4,
                    "ratingType": "RATNG_TYPE",
                    "savings": 30,
                    "title": "TITLE",
                  },
                  Object {
                    "address": "ADDRESS2",
                    "freeCancellation": true,
                    "id": "ID2",
                    "image": "IMG_URL2",
                    "name": "NAME",
                    "price": 329,
                    "promotion": "PROMOTION",
                    "rating": 4,
                    "ratingType": "RATNG_TYPE",
                    "savings": 30,
                    "title": "TITLE2",
                  },
                ]
              }
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "onOptionChange": [Function],
              "optionSelected": "desc",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "hotels": Array [
                Object {
                  "address": "ADDRESS",
                  "freeCancellation": true,
                  "id": "ID",
                  "image": "IMG_URL",
                  "name": "NAME",
                  "price": 329,
                  "promotion": "PROMOTION",
                  "rating": 4,
                  "ratingType": "RATNG_TYPE",
                  "savings": 30,
                  "title": "TITLE",
                },
                Object {
                  "address": "ADDRESS2",
                  "freeCancellation": true,
                  "id": "ID2",
                  "image": "IMG_URL2",
                  "name": "NAME",
                  "price": 329,
                  "promotion": "PROMOTION",
                  "rating": 4,
                  "ratingType": "RATNG_TYPE",
                  "savings": 30,
                  "title": "TITLE2",
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "main",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <header>
            <h1>
              Qantas Hotels
            </h1>
          </header>,
          <main>
            <FilterBar
              onOptionChange={[Function]}
              optionSelected="desc"
            />
            <HotelList
              hotels={
                Array [
                  Object {
                    "address": "ADDRESS",
                    "freeCancellation": true,
                    "id": "ID",
                    "image": "IMG_URL",
                    "name": "NAME",
                    "price": 329,
                    "promotion": "PROMOTION",
                    "rating": 4,
                    "ratingType": "RATNG_TYPE",
                    "savings": 30,
                    "title": "TITLE",
                  },
                  Object {
                    "address": "ADDRESS2",
                    "freeCancellation": true,
                    "id": "ID2",
                    "image": "IMG_URL2",
                    "name": "NAME",
                    "price": 329,
                    "promotion": "PROMOTION",
                    "rating": 4,
                    "ratingType": "RATNG_TYPE",
                    "savings": 30,
                    "title": "TITLE2",
                  },
                ]
              }
            />
          </main>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h1>
              Qantas Hotels
            </h1>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Qantas Hotels",
            },
            "ref": null,
            "rendered": "Qantas Hotels",
            "type": "h1",
          },
          "type": "header",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <FilterBar
                onOptionChange={[Function]}
                optionSelected="desc"
              />,
              <HotelList
                hotels={
                  Array [
                    Object {
                      "address": "ADDRESS",
                      "freeCancellation": true,
                      "id": "ID",
                      "image": "IMG_URL",
                      "name": "NAME",
                      "price": 329,
                      "promotion": "PROMOTION",
                      "rating": 4,
                      "ratingType": "RATNG_TYPE",
                      "savings": 30,
                      "title": "TITLE",
                    },
                    Object {
                      "address": "ADDRESS2",
                      "freeCancellation": true,
                      "id": "ID2",
                      "image": "IMG_URL2",
                      "name": "NAME",
                      "price": 329,
                      "promotion": "PROMOTION",
                      "rating": 4,
                      "ratingType": "RATNG_TYPE",
                      "savings": 30,
                      "title": "TITLE2",
                    },
                  ]
                }
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "onOptionChange": [Function],
                "optionSelected": "desc",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "hotels": Array [
                  Object {
                    "address": "ADDRESS",
                    "freeCancellation": true,
                    "id": "ID",
                    "image": "IMG_URL",
                    "name": "NAME",
                    "price": 329,
                    "promotion": "PROMOTION",
                    "rating": 4,
                    "ratingType": "RATNG_TYPE",
                    "savings": 30,
                    "title": "TITLE",
                  },
                  Object {
                    "address": "ADDRESS2",
                    "freeCancellation": true,
                    "id": "ID2",
                    "image": "IMG_URL2",
                    "name": "NAME",
                    "price": 329,
                    "promotion": "PROMOTION",
                    "rating": 4,
                    "ratingType": "RATNG_TYPE",
                    "savings": 30,
                    "title": "TITLE2",
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "main",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
